Begin to get some file infos from filesystem Add some UI components to make debug easier

--- a/apps/frontend-public/src/app/app.component.html
+++ b/apps/frontend-public/src/app/app.component.html
@@ -1,3 +1,39 @@
-<div class="main-content">
-  <router-outlet></router-outlet>
+<div class="app-root">
+  <mat-sidenav-container style="background-color: white;">
+    <mat-sidenav #sidenav mode="over"
+                 [fixedInViewport]="true">
+      <mat-nav-list *ngIf="currentUser$ | async">
+        <!-- <a mat-list-item (click)="sidenav.toggle(); goToSettings();" *ngIf="(currentUser$ | async)?.email === 'nicolas.mura@gmail.com'">Settings (soon...)</a> -->
+        <a mat-list-item disabled *ngIf="(currentUser$ | async)?.email === 'nicolas.mura@gmail.com'">V17</a>
+        <a mat-list-item (click)="sidenav.toggle(); logout()"><mat-icon style="margin-right: 10px;">logout</mat-icon>Déconnexion</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <mat-toolbar color="primary" *ngIf="currentUser$ | async" style="background-color: white; color: #2E2E2E;">
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <!-- <h1>{{ (currentMoment$ | async)?.month() }} - V17</h1> -->
+        <h1 style="margin-left: 10px; font-size: 24px; display: flex;">Zuokin Photos</h1>
+        <span style="flex: 1 1 auto;"></span>
+        <!-- <button mat-icon-button (click)="refreshApp()">
+          <mat-icon>refresh</mat-icon>
+        </button>
+        <button mat-icon-button *ngIf="router.url.split('?')[0] === '/';" (click)="goToToday()">
+          <mat-icon>today</mat-icon>
+        </button> -->
+      </mat-toolbar>
+
+      <main [ngClass]="{'isLogged': currentUser$ | async}">
+        <router-outlet #o="outlet"></router-outlet>
+      </main>
+
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
+  <!-- <div *ngIf="webSocketService.lostConnection"
+       style="position: absolute; z-index: 10; bottom: 0; background-color: red; width: 100%; height: 20px; color: white; padding-left: 5px">
+    Pas de connexion internet ?
+  </div> -->
 </div>
