--- a/apps/frontend-public/src/app/components/home/home.component.html
+++ b/apps/frontend-public/src/app/components/home/home.component.html
@@ -1,7 +1,6 @@
-<div>zphotos-home works!</div>
-
 <button mat-flat-button color="primary" aria-label="login"
-        (click)=test()
+        (click)=openDirectory()
         [class.mc-spinner]="loginLoadingSpinner">
   Open directory
 </button>
+
