--- a/apps/frontend-public/src/app/app.component.scss
+++ b/apps/frontend-public/src/app/app.component.scss
@@ -1,4 +1,37 @@
-.main-content {
-  padding: 0px 30px 30px;
-  background-color: white;
+.app-root {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  .mat-sidenav-container {
+    /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+       causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+    flex: 1 0 auto;
+
+    .mat-sidenav-content {
+      height: 100vh;
+      // background-color: yellow;
+
+      .mat-toolbar {
+        position: fixed;
+        height: 64px;
+        /* Make sure the toolbar will stay on top of the content as it scrolls past. */
+        z-index: 2000000000;
+      }
+
+      main {
+        // background-color: bisque;
+        height: 100%;
+
+        &.isLogged {
+          height: calc(100% - 64px); // 64px = mat-toolbar height
+          margin-top: 64px;
+        }
+      }
+    }
+  }
 }
