--- a/apps/frontend-public/src/app/app.component.scss
+++ b/apps/frontend-public/src/app/app.component.scss
@@ -1,3 +1,5 @@
+$toolbarHeight: 64px;
+
 .app-root {
   display: flex;
   flex-direction: column;
@@ -18,9 +20,15 @@
 
       .mat-toolbar {
         position: fixed;
-        height: 64px;
+        height: $toolbarHeight;
         /* Make sure the toolbar will stay on top of the content as it scrolls past. */
         z-index: 2000000000;
+        // background-color: #e91e63;
+        // color: #2E2E2E;
+
+        &.shadow {
+          box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12),0px 2px 4px -1px rgba(0,0,0,0.2);
+        }
       }
 
       main {
@@ -28,8 +36,8 @@
         height: 100%;
 
         &.isLogged {
-          height: calc(100% - 64px); // 64px = mat-toolbar height
-          margin-top: 64px;
+          height: calc(100vh - #{$toolbarHeight});
+          margin-top: $toolbarHeight;
         }
       }
     }
