--- a/apps/frontend-public/src/app/components/home/home.component.scss
+++ b/apps/frontend-public/src/app/components/home/home.component.scss
@@ -1,3 +1,29 @@
-.file-input {
-  display: none;
+$toolbarHeight: 64px;
+$actionsbarHeight: 64px;
+
+.page-gallery {
+  position: relative;
+  background-color: white;
+
+  .gallery {
+    height: calc(100vh - #{$actionsbarHeight} - #{$toolbarHeight});
+    overflow-y: scroll;
+    padding: 20px;
+    color: #000000de;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .file-input {
+    display: none;
+  }
+
+  .tabs {
+    height: $actionsbarHeight;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    padding: 0px 12px;
+    background-color: #303030;
+  }
 }
