--- a/libs/frontend-tools/src/lib/styles/app-all.scss
+++ b/libs/frontend-tools/src/lib/styles/app-all.scss
@@ -8,7 +8,7 @@
 // @import 'app-material-tables';
 // @import 'app-material-tabs';
 // @import 'app-material-tooltips';
-// @import 'app-skeletons';
+@import 'app-skeletons';
 // @import 'app-slider-swiper';
 @import 'app-startup-loader';
 @import 'app-spinners';
