--- a/apps/frontend-public/src/app/app.component.scss
+++ b/apps/frontend-public/src/app/app.component.scss
@@ -63,10 +63,16 @@ $actionsbarHeight: 64px;
       .content {
         height: calc(100vh - #{$actionsbarHeight} - #{$toolbarHeight});
         overflow-y: scroll;
-        padding: 20px;
+        padding-top: 20px;
         color: #000000de;
         display: flex;
         flex-direction: column;
+
+        &.padded {
+          padding-left: 20px;
+          padding-right: 20px;
+          padding-bottom: 20px;
+        }
       }
     }
   }
