--- a/apps/frontend-public/src/app/components/home/home.component.scss
+++ b/apps/frontend-public/src/app/components/home/home.component.scss
@@ -5,17 +5,30 @@ $actionsbarHeight: 64px;
 
 .gallery {
   .content {
-    // .medias-container {
-    //   display: grid;
-    //   grid-template-columns: repeat(3, 1fr);
-    //   grid-template-rows: repeat(3, 5vw);
-    //   grid-gap: 15px;
-    // }
+    .medias-container {
+      display: grid;
+      // grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: repeat(4, 30vw);
+      grid-gap: 3px;
+      grid-auto-columns: 1fr;
+
+      > div {
+        width: 100%;
+
+        img, video {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          display: block;
+        }
+      }
+    }
 
     .skeleton {
       @include background-skeleton;
-      width: 100px;
-      height: 100px;
+      // width: 100px;
+      // height: 100px;
     }
   }
 
