Manage media creation time and add thumbnails Sort medias Optimize metadatas Clean code

--- a/apps/frontend-public/src/app/components/account/account.component.html
+++ b/apps/frontend-public/src/app/components/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="page gallery">
 
-  <div class="content padding">
+  <div class="content padded">
     <div>Account page</div>
   </div>
 
