--- a/apps/frontend-public/src/app/components/login/login.component.html
+++ b/apps/frontend-public/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 
     <mat-form-field appearance="legacy">
       <mat-label for="username">Email</mat-label>
-      <input matInput type="text" formControlName="username" zphotosLibAutofocus/>
+      <input matInput type="email" formControlName="username" zphotosLibAutofocus/>
       <mat-hint *ngIf="!usernameInput?.value">Veuillez saisir votre email</mat-hint>
       <mat-error *ngIf="errorHandling('username', 'required')">
         Erreur: champ requis
